# ncnn-examples

./: .gitignore  CMakeLists.txt  README.md  main.cpp  nas_unshuffle_srx2_profile  nas_unshuffle_srx4_profile  wdsr_unshuffle_srx4_profile
